--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@ window.onscroll = () => {
             </a>
         </div>
     </footer>
-
+ <script src="snake.js"></script>
     <script src="script.js"></script>
     <script src="project.js"></script>
     <script src="resume.js"></script>
