--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
           50% { background-position: 100% 50%; }
           100% { background-position: 0% 50%; }
         }
+
+        #snake-canvas {
+    position: fixed; /* sabke upar rahega */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none; /* taaki click wagairah block na kare */
+    z-index: 9999; /* highest level pe */
+}
     
         .animated-wrapper {
           position: relative;
@@ -164,6 +174,8 @@
             <span class="animate" style="--i:2;"></span>
         </nav>
     </header>
+
+    <canvas id="snake-canvas"></canvas>
 
     <!-- home section design -->
     <section class="home show-animate" id="home">
