--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
         <div class="animated-wrapper">
             <div class="image-container">
-              <img src="https://i.ibb.co/21SpqBtb/Whats-App-Image-2025-04-13-at-11-06-59-PM-1.jpg" alt="Portfolio Image">
+              <img src="https://i.ibb.co/mV9hCPrt/MOSHED-2025-6-17-18-54-20.gif" alt="Portfolio Image">
             </div>
             <div class="code-overlay">
               <div class="code-scroll">
