--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 
 
     <style>
+
+        @media (min-width: 768px) {
+  body {
+    cursor: url('https://static.vecteezy.com/system/resources/thumbnails/032/058/256/small/cursor-icon-illustration-3d-render-element-png.png'), auto;
+  }
+}
+
         @keyframes bgAnimation {
           0% { background-position: 0% 50%; }
           50% { background-position: 100% 50%; }
@@ -785,21 +792,7 @@ window.onscroll = () => {
 
         
     </script>
- <script>
-  document.addEventListener("DOMContentLoaded", function () {
-    // Image path set karo
-    const imageUrl = "https://static.vecteezy.com/system/resources/thumbnails/032/058/256/small/cursor-icon-illustration-3d-render-element-png.png"; // 👈 Apni image ka path yahaan do
 
-    // CSS style dynamically apply karo
-    const style = document.createElement("style");
-    style.innerHTML = `
-      body {
-        cursor: url(${imageUrl}), auto;
-      }
-    `;
-    document.head.appendChild(style);
-  });
-</script>
          
 </body>
 
