--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
   cursor: none; /* Hide default cursor */
 }
 
+        body :hover{
+  cursor: none;
+}
 #custom-cursor {
   position: fixed;
   top: 0;
