--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@ window.onscroll = () => {
         </div>
     </footer>
             <div id="custom-cursor">
-  <img src="https://static.vecteezy.com/system/resources/thumbnails/032/058/256/small/cursor-icon-illustration-3d-render-element-png.png" alt="cursor">
+  <img src="https://www.transparentpng.com/download/mouse-cursor/lHbsTB-download-mouse-cursor-png.png" alt="cursor">
 </div>
 
     <script src="script.js"></script>
