--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@ window.onscroll = () => {
         </div>
     </footer>
             <div id="custom-cursor">
-  <img src="https://www.transparentpng.com/download/mouse-cursor/lHbsTB-download-mouse-cursor-png.png" alt="cursor">
+  <img src="https://jpsuperiorbackyards.com/index_htm_files/fire-65.gif" alt="cursor">
 </div>
 
     <script src="script.js"></script>
