--- a/index.html
+++ b/index.html
@@ -163,11 +163,12 @@
 }
 
 #custom-cursor img {
-  width: 60px; /* Change to 100px or 100% of what you want */
-  height: 60px;
+  width: 30px; /* Change to 100px or 100% of what you want */
+  height: 30px;
   object-fit: contain;
 }
 
+        
     </style>
 </head>
 
@@ -798,7 +799,7 @@ window.onscroll = () => {
         </div>
     </footer>
             <div id="custom-cursor">
-  <img src="https://jpsuperiorbackyards.com/index_htm_files/fire-65.gif" alt="cursor">
+  <img src="https://static.vecteezy.com/system/resources/thumbnails/032/058/256/small/cursor-icon-illustration-3d-render-element-png.png" alt="cursor">
 </div>
 
     <script src="script.js"></script>
