--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <a href="https://drive.google.com/file/d/1up6odh7cicnOU5cZHEDMp57z-e2x2O1T/view?usp=sharing" target="_blank" class="btn" id="resume-btn">
                     <i class='bx bxs-file-pdf'></i> Resume
                 </a>
-                <a href="#" class="btn">Let's Talk</a>
+                <a href="https://www.linkedin.com/in/narsijangid/" class="btn">Let's Talk</a>
                 <span class="animate" style="--i:5;"></span>
             </div>
         </div>
