--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <h3>Full stack Developer</h3>
                 <span class="animate" style="--i:3;"></span>
             </div>
-            <p>I am a Full Stack Developer skilled in front-end technologies like HTML, CSS, JavaScript, and React, as well as back-end tools such as Node.js, Express, and MongoDB. I focus on writing clean code, building responsive web apps, and creating smooth user experiences. Passionate about solving problems and bringing ideas to life.
+            <p>Full Stack developer with hands-on experience in front-end technologies like HTML, CSS, JavaScript, and React, combined with strong back-end expertise in Node.js, Express, and MongoDB. Specializes in writing clean, maintainable code and building responsive web applications that deliver seamless user experiences. Driven by a passion for solving real-world problems and transforming ideas into functional digital solutions.
                 <span class="animate" style="--i:4;"></span>
             </p>
 
