--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <h3>Full stack Developer</h3>
                 <span class="animate" style="--i:3;"></span>
             </div>
-            <p>Full Stack developer with hands-on experience in front-end technologies like HTML, CSS, JavaScript, and React, combined with strong back-end expertise in Node.js, Express, and MongoDB. Specializes in writing clean, maintainable code and building responsive web applications that deliver seamless user experiences. Driven by a passion for solving real-world problems and transforming ideas into functional digital solutions.
+            <p>Full Stack Developer experienced in building end-to-end web applications by combining efficient backend logic with intuitive, responsive frontend interfaces. Skilled in modern technologies like React, Node.js, Express, and MongoDB, with a focus on clean code and seamless user experiences.
                 <span class="animate" style="--i:4;"></span>
             </p>
 
