--- a/index.html
+++ b/index.html
@@ -818,14 +818,14 @@ window.onscroll = () => {
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
 
-        <form id="contactForm" action="https://formspree.io/f/narsijangid@gmail.com" method="POST">
+        <form id="contactForm" action="https://formspree.io/f/mldnolgq" method="POST">
             <div class="input-box">
                 <div class="input-field">
                     <input type="text" name="name" placeholder="Full Name" required>
                     <span class="focus"></span>
                 </div>
                 <div class="input-field">
-                    <input type="email" name="email" placeholder="Email" required>
+                    <input type="email" name="email" placeholder="Your Email" required>
                     <span class="focus"></span>
                 </div>
 
@@ -837,7 +837,7 @@ window.onscroll = () => {
                     <span class="focus"></span>
                 </div>
                 <div class="input-field">
-                    <input type="text" name="subject" placeholder="Email Subject" required>
+                    <input type="text" name="subject" placeholder="Subject" required>
                     <span class="focus"></span>
                 </div>
 
