about img changed

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ window.onscroll = () => {
         <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <div class="about-img">
-            <img src="https://i.ibb.co/r2RmfQdW/Whats-App-Image-2025-04-13-at-7-44-12-PM-1.jpg" alt="">
+            <img src="./images/My pic.jpeg" alt="">
             <span class="circle-spin"></span>
             <span class="animate scroll" style="--i:2;"></span>
         </div>
